# hypergraph

./: .gitignore  .upstream-sync  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  RAI_TRANSPARENCY.md  README.md  SECURITY.md  SUPPORT.md  breaking-changes.md  index.html  mkdocs.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  general_issue.yml
.github/workflows/: gh-pages.yml  python-checks.yml  python-integration-tests.yml  python-notebook-tests.yml  python-publish.yml  python-smoke-tests.yml  python-unit-tests.yml
.semversioner/: 2.0.0.json  2.3.0.json  3.0.0.json  3.0.2.json
blog_posts/: index.html
cli/: index.html
config/init/: index.html
config/models/: index.html
config/overview/: index.html
config/yaml/: index.html
data/operation_dulce/ABOUT/: index.html
data/operation_dulce/Operation Dulce v2 1 1/: index.html
developing/: index.html
docs/: blog_posts.md  cli.md  get_started.md  index.md  visualization_guide.md
docs/config/: init.md  models.md  overview.md  yaml.md
docs/index/: architecture.md  byog.md  default_dataflow.md  inputs.md  methods.md  overview.md
docs/prompt_tuning/: auto_prompt_tuning.md  manual_prompt_tuning.md  overview.md
docs/query/: drift_search.md  global_search.md  local_search.md  overview.md  question_generation.md
examples_notebooks/api_overview/: index.html
examples_notebooks/drift_search/: index.html
examples_notebooks/global_search/: index.html
examples_notebooks/global_search_with_dynamic_community_selection/: index.html
examples_notebooks/index_migration_to_v1/: index.html
examples_notebooks/index_migration_to_v2/: index.html
examples_notebooks/index_migration_to_v3/: index.html
examples_notebooks/input_documents/: index.html
examples_notebooks/inputs/operation dulce/ABOUT/: index.html
examples_notebooks/inputs/operation dulce/Operation Dulce v2 1 1/: index.html
examples_notebooks/local_search/: index.html
get_started/: index.html
index/architecture/: index.html
index/byog/: index.html
index/default_dataflow/: index.html
index/inputs/: index.html
index/methods/: index.html
index/outputs/: index.html
index/overview/: index.html
prompt_tuning/auto_prompt_tuning/: index.html
prompt_tuning/manual_prompt_tuning/: index.html
prompt_tuning/overview/: index.html
query/drift_search/: index.html
query/global_search/: index.html
query/local_search/: index.html
query/notebooks/overview/: index.html
query/overview/: index.html
query/question_generation/: index.html
scripts/: __init__.py  semver-check.sh
search/: search_index.json
tests/: __init__.py
tests/fixtures/min-csv/: settings.yml
tests/fixtures/text/: settings.yml
tests/integration/cache/: test_factory.py
tests/integration/language_model/: test_factory.py  test_rate_limiter.py  test_retries.py
tests/integration/logging/: test_factory.py  test_standard_logging.py
tests/integration/storage/: test_blob_storage.py  test_cosmosdb_storage.py  test_factory.py  test_file_storage.py
tests/integration/vector_stores/: test_azure_ai_search.py  test_cosmosdb.py  test_factory.py  test_lancedb.py
tests/notebook/: test_notebooks.py
tests/smoke/: test_fixtures.py
tests/unit/chunking/: test_chunker.py  test_prepend_metadata.py
tests/unit/config/: test_config.py  test_metrics_config.py  test_model_config.py  test_rate_limit_config.py  test_retry_config.py  test_template_engine_config.py  test_tokenizer_config.py  utils.py
tests/unit/graphrag_factory/: test_factory.py
tests/unit/graphs/: nx_stable_lcc.py  test_compute_degree.py  test_connected_components.py  test_modularity.py  test_stable_lcc.py
tests/unit/hasher/: test_hasher.py
tests/unit/indexing/: test_init_content.py  test_profiling.py
tests/unit/indexing/cache/: test_file_pipeline_cache.py
tests/unit/indexing/graph/extractors/community_reports/: test_sort_context.py
tests/unit/indexing/input/: test_csv_loader.py  test_json_loader.py  test_jsonl_loader.py  test_markitdown_loader.py  test_text_document.py  test_text_loader.py
tests/unit/indexing/operations/resolve_entities/: test_resolve_entities.py
tests/unit/indexing/verbs/entities/extraction/strategies/graph_intelligence/: test_gi_entity_extraction.py
tests/unit/indexing/workflows/: test_extract_graph_type_proposals.py
tests/unit/load_config/: test_load_config.py
tests/unit/prompt_tune/: test_load_docs_in_chunks.py
tests/unit/query/context_builder/: dynamic_community_selection.py  test_entity_extraction.py
tests/unit/query/input/retrieval/: test_entities.py
tests/unit/storage/: test_csv_table_provider.py  test_parquet_table_provider.py
tests/unit/utils/: test_encoding.py
tests/verbs/: test_create_base_text_units.py  test_create_communities.py  test_create_community_reports.py  test_create_final_documents.py  test_create_final_text_units.py  test_extract_covariates.py  test_extract_graph.py  test_extract_graph_nlp.py  test_finalize_graph.py  test_generate_text_embeddings.py  test_pipeline_state.py  test_prune_graph.py  util.py
unified-search-app/: README.md  pyproject.toml
unified-search-app/app/: app_logic.py  home_page.py
unified-search-app/app/knowledge_loader/: data_prep.py  model.py
unified-search-app/app/knowledge_loader/data_sources/: blob_source.py  local_source.py  typing.py
unified-search-app/app/state/: session_variables.py
visualization_guide/: index.html
